# data-generator

./: Dockerfile.app1  Dockerfile.app2  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/app1/: api_server.py
src/app1/static/: swagger.yaml
src/app1/templates/: index.html
src/app2/: telemetry_generator.py
